# storage/api-docs/api-docs.json
@@ -11,23 +11,21 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Send OTP Code",
-                "description": "Send OTP code to user's phone number",
+                "summary": "Send OTP code",
+                "description": "Sends an OTP code to the specified phone number.",
                 "operationId": "e09c538c074a7b4a0f0c055ec2893f49",
                 "requestBody": {
-                    "description": "User phone number",
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
+                                "required": [
+                                    "phone"
+                                ],
                                 "properties": {
                                     "phone": {
                                         "type": "string",
                                         "example": "09123456789"
-                                    },
-                                    "_token": {
-                                        "description": "CSRF Token",
-                                        "type": "string"
                                     }
                                 },
                                 "type": "object"
@@ -37,43 +35,175 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "لطفا رمز خود را وارد کنید"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
+                        "description": "OTP sent successfully"
                     },
                     "400": {
-                        "description": "Bad Request",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "error": {
-                                            "type": "string",
-                                            "example": "اطلاعات ارسال شده درست نبوده است"
-                                        }
+                        "description": "Invalid phone number or user not found"
+                    }
+                }
+            }
+        },
+        "/api/auth/checkCode": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Verify OTP code",
+                "description": "Verifies the OTP code sent to the specified phone number.",
+                "operationId": "715451e030d64688fd5ab7c760063d85",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "code",
+                                    "phone"
+                                ],
+                                "properties": {
+                                    "code": {
+                                        "type": "integer",
+                                        "example": "123456"
                                     },
-                                    "type": "object"
-                                }
+                                    "phone": {
+                                        "type": "string",
+                                        "example": "09123456789"
+                                    }
+                                },
+                                "type": "object"
                             }
                         }
                     }
                 },
-                "security": [
-                    {
-                        "csrf": []
+                "responses": {
+                    "200": {
+                        "description": "OTP code is valid"
+                    },
+                    "400": {
+                        "description": "Invalid OTP code or phone number"
                     }
-                ]
+                }
+            }
+        },
+        "/api/auth/checkPassword": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Verify user password",
+                "description": "Verifies the user's password.",
+                "operationId": "186f85d85f133015a9b296a1ee8bd839",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "password",
+                                    "phone"
+                                ],
+                                "properties": {
+                                    "password": {
+                                        "type": "string",
+                                        "format": "password",
+                                        "example": "Password123"
+                                    },
+                                    "phone": {
+                                        "type": "string",
+                                        "example": "09123456789"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Password is valid"
+                    },
+                    "400": {
+                        "description": "Invalid password or phone number"
+                    }
+                }
+            }
+        },
+        "/api/auth/registerUser": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Register a new user",
+                "description": "Registers a new user with provided information.",
+                "operationId": "7d7d1fe02ff95ebb9daa7372a6326642",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "first_name",
+                                    "last_name",
+                                    "phone",
+                                    "password",
+                                    "national_code",
+                                    "code",
+                                    "gender",
+                                    "birthday"
+                                ],
+                                "properties": {
+                                    "first_name": {
+                                        "type": "string",
+                                        "example": "John"
+                                    },
+                                    "last_name": {
+                                        "type": "string",
+                                        "example": "Doe"
+                                    },
+                                    "phone": {
+                                        "type": "string",
+                                        "example": "09123456789"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "format": "password",
+                                        "example": "Password123"
+                                    },
+                                    "national_code": {
+                                        "type": "integer",
+                                        "example": "1234567890"
+                                    },
+                                    "code": {
+                                        "type": "integer",
+                                        "example": "123456"
+                                    },
+                                    "gender": {
+                                        "type": "string",
+                                        "enum": [
+                                            "male",
+                                            "female"
+                                        ],
+                                        "example": "male"
+                                    },
+                                    "birthday": {
+                                        "type": "string",
+                                        "format": "date",
+                                        "example": "1990-01-01"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "User registered successfully"
+                    },
+                    "400": {
+                        "description": "Invalid data or registration failed"
+                    }
+                }
             }
         },
         "/api/logout": {
